tests/NormalTests/paczka1/small_fuzzy/59163072.err
Error in line 2: bHqfQxQce S109 28,1
Error in line 1: S109 S109 88,4
Error in line 8: S109 S178 31,3
Error in line 6: Om1RJGow S109 66,3
Error in line 13: Om1RJGow S429 42,7
